--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -3,6 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
+	<string>com.plexapp.plugins.libupdater</string>
 	<key>PlexClientPlatforms</key>
 	<string>*</string>
 	<key>PlexFrameworkVersion</key>
